# rust-graphql-perf

./: Cargo.toml  schema.graphql
src/: main.rs
src/controllers/: instance0.rs  instance1.rs  instance2.rs  instance3.rs  instance4.rs  instance5.rs  instance6.rs  instance7.rs  instance8.rs  instance9.rs  mod.rs
