[package]
name = "rust-graphql-perf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14.26", features = ["full"] }
tokio = { version = "1.25.0", default-features = false, features = ["full"] }
uuid = { version = "0.8.2", features = ["serde", "v4"] }
chrono = { version = "0.4.23", features = ["serde"] }
serde = "1.0.152"
serde_json = "1.0.93"
anyhow = "1.0.69"
paste = "1.0.11"
getset = "0.1.2"
juniper = "0.15.11"
juniper_hyper = "0.8.0"